objects/OAuthService__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorization_Type__c</fullName>
        <label>Authorization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Request Header (Authorization: Bearer)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Request Header (Authorization: OAuth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URI Query Parameter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>token</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Services</pluralLabel>
    <recordTypes>
        <fullName>OAuth1</fullName>
        <active>true</active>
        <description>OAuth 1.0 Service</description>
        <label>OAuth1</label>
    </recordTypes>
    <recordTypes>
        <fullName>OAuth2</fullName>
        <active>true</active>
        <description>OAuth 2.0 Service</description>
        <label>OAuth2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RecordClassifiedByType</fullName>
        <active>true</active>
        <errorConditionFormula>IF (RecordType.DeveloperName=&quot;OAuth1&quot;,
  true,
  false
)</errorConditionFormula>
        <errorMessage>レコードタイプが OAuth1 です。</errorMessage>
    </validationRules>
</CustomObject>